@@ -1,79 +1,93 @@
-# Sistema de Ponto de Venda (PDV) - Back-end
+# Sistema de Ponto de Venda (PDV) com JavaFX
 
-Este projeto consiste no desenvolvimento do back-end para um sistema de Ponto de Venda (PDV) de uma loja física. A aplicação foi criada como parte da disciplina de Programação Orientada a Objetos (POO), aplicando os conceitos fundamentais de POO e padrões de design para criar um sistema robusto, organizado e de fácil manutenção.
+Este projeto é uma aplicação de desktop completa para um Ponto de Venda (PDV), desenvolvida como trabalho final da disciplina de Programação Orientada a Objetos (POO). O sistema possui uma interface gráfica moderna construída com **JavaFX** e um back-end robusto que se conecta ao **Google Firebase** em tempo real.
 
-O sistema gerencia usuários com diferentes níveis de permissão (Gerente e Atendente), controla um inventário de produtos e registra as vendas, utilizando o Google Firebase como banco de dados NoSQL em tempo real.
+A aplicação gerencia um sistema de autenticação seguro com senhas criptografadas, controla um inventário de produtos e, o mais importante, implementa um sistema de **autorização com permissões granulares**, permitindo que um gerente defina capacidades específicas para cada usuário atendente.
 
 ## Conceitos de POO e Arquitetura Aplicados
 
-Este projeto foi estruturado para demonstrar a aplicação prática de diversos conceitos essenciais de engenharia de software:
+O projeto foi estruturado para demonstrar a aplicação prática de diversos conceitos essenciais de engenharia de software:
 
 -   **Orientação a Objetos:**
-    -   **Herança:** A hierarquia de classes `Usuario` -> `Gerente` e `Atendente` para especializar e reutilizar código.
-    -   **Polimorfismo:** O sistema trata objetos `Gerente` e `Atendente` de forma genérica como `Usuario`, mas utiliza `instanceof` para aplicar lógicas de permissão específicas.
-    -   **Encapsulamento:** Todos os atributos das classes de modelo são privados e acessados através de getters e setters, protegendo o estado dos objetos.
-    -   **Abstração:** Uso de classes abstratas (`Usuario`) e interfaces para definir contratos e modelos.
+    -   **Herança e Abstração:** A hierarquia de classes `Usuario` -> `Gerente` e `Atendente` para modelar diferentes tipos de usuários a partir de uma base comum.
+    -   **Polimorfismo:** A aplicação lida com diferentes tipos de controllers de forma padronizada através da interface `IController`, e a lógica de negócio trata `Gerente` e `Atendente` como `Usuario`.
+    -   **Encapsulamento:** Todos os atributos das classes de modelo são privados, com acesso controlado através de métodos públicos.
 
--   **Interfaces:** Definição de contratos com `IAutenticacao` e `ICrud<T>`, garantindo um padrão consistente para autenticação e operações de persistência.
+-   **Segurança:**
+    -   **Criptografia de Senhas:** As senhas dos usuários são sempre armazenadas no banco de dados como um **hash seguro**, utilizando a biblioteca **jBCrypt**. A senha em texto plano nunca é salva.
 
--   **Tratamento de Exceções:** Criação de exceções de negócio personalizadas (ex: `ProdutoNaoEncontradoException`, `AcessoNegadoException`) para um controle de erros claro e específico.
+-   **Interfaces:** Definição de contratos com `IAutenticacao`, `ICrud<T>` e `IController`, garantindo um padrão consistente para autenticação, persistência de dados e navegação entre telas.
+
+-   **Tratamento de Exceções:** Criação de exceções de negócio personalizadas (ex: `ProdutoNaoEncontradoException`, `AcessoNegadoException`) para um controle de erros claro e específico na aplicação.
 
 -   **Padrões de Design (Design Patterns):**
-    -   **MVC (Model-view-Controller):** A arquitetura foi refatorada para separar as responsabilidades, com o `SistemaController` gerenciando o fluxo da aplicação.
-    -   **Repository:** A camada `repository` abstrai a complexidade do acesso ao banco de dados, desacoplando a lógica de negócio da tecnologia de persistência.
+    -   **MVC (Model-View-Controller):** A arquitetura da interface gráfica separa claramente a View (`.fxml`), o Controller (classes `*Controller.java`) e o Model (camada de `service`).
+    -   **Repository:** A camada `repository` abstrai toda a complexidade do acesso ao Firebase.
     -   **DTO (Data Transfer Object):** O uso de `VendaDTO` para desacoplar o modelo de domínio do modelo de persistência.
-    -   **Dependency Injection:** A injeção de dependências no `VendaService` e no `SistemaController` para aumentar a flexibilidade e testabilidade.
+    -   **Dependency Injection:** A injeção de dependências (manual) nos serviços e controllers para aumentar a flexibilidade e testabilidade.
 
--   **Banco de Dados:** Integração com um banco de dados NoSQL na nuvem (Firebase Realtime Database), com operações de leitura e escrita assíncronas.
+## Principais Funcionalidades
 
-## Funcionalidades Implementadas
+O sistema possui funcionalidades dinâmicas baseadas nas permissões de cada usuário:
 
-O sistema possui diferentes funcionalidades baseadas no nível de acesso do usuário:
-
-#### Atendente
--   Autenticação por usuário e senha.
--   Registro de vendas de produtos, com aplicação de descontos e seleção da forma de pagamento.
-
-#### Gerente
--   Todas as funcionalidades de um Atendente.
--   Cadastro de novos produtos no sistema.
--   Atualização do estoque de produtos existentes.
--   Cadastro de novos usuários do tipo Atendente.
+-   **Autenticação Segura:** Login com senhas criptografadas e bloqueio de usuários inativos.
+-   **Tela Inicial Dinâmica:** Uma tela de boas-vindas que se transforma no painel principal da aplicação após o login.
+-   **Registro de Vendas:** Interface para registrar vendas, com busca de produtos e aplicação de descontos.
+-   **Visualização de Estoque:** Usuários com a permissão `VISUALIZAR_ESTOQUE` podem ver a lista de produtos e suas quantidades.
+-   **Gerenciamento de Estoque (Permissão):** Usuários com a permissão `GERENCIAR_ESTOQUE` podem adicionar, remover e atualizar o preço dos produtos.
+-   **Cadastro de Produtos (Permissão):** Usuários com a permissão `CADASTRAR_PRODUTO` podem adicionar novos itens ao inventário.
+-   **Gerenciamento de Usuários (Permissão):** Usuários com a permissão `GERENCIAR_USUARIOS` podem:
+    -   Cadastrar novos atendentes.
+    -   Ativar e inativar contas de atendentes.
+    -   Gerenciar as permissões individuais de cada atendente através de uma interface de checkboxes.
 
 ## Arquitetura do Sistema
 
-O projeto segue uma arquitetura em camadas para garantir a separação de responsabilidades:
-
--   **Main:** Ponto de entrada da aplicação. Apenas inicia o Controller.
--   **Controller:** Camada responsável por interagir com o usuário, receber entradas e orquestrar as chamadas para os serviços.
--   **Service:** Camada onde reside a lógica de negócio principal do sistema (regras de autorização, validações, etc.).
--   **Repository:** Camada de acesso a dados. Abstrai e encapsula toda a comunicação com o Firebase.
--   **Model / Excecoes / Interfaces:** Camadas transversais com as definições de entidades, exceções de negócio e contratos.
+O projeto segue uma arquitetura em camadas clara:
+-   **App.java:** Ponto de entrada que inicia a aplicação JavaFX.
+-   **View (.fxml):** Define a estrutura visual e os componentes de cada tela.
+-   **Controller:** Recebe eventos da View, orquestra chamadas para os Serviços e atualiza a View.
+-   **Service:** Contém a lógica de negócio e as regras do sistema.
+-   **Repository:** Abstrai e encapsula toda a comunicação com o Firebase.
 
 ## Tecnologias Utilizadas
 
--   **Linguagem:** Java 
+-   **Linguagem:** Java 17+
+-   **Interface Gráfica:** JavaFX 17+
 -   **Banco de Dados:** Google Firebase Realtime Database
+-   **Segurança:** jBCrypt 0.4
 
 ## Configuração e Execução
 
 Para executar o projeto localmente, siga os passos abaixo:
 
 #### 1. Pré-requisitos
--   JDK 11 ou superior instalado.
--   Uma IDE de sua preferência (IntelliJ IDEA, Eclipse, etc.).
+-   JDK 17 ou superior instalado.
+-   **JavaFX SDK** baixado e descompactado em uma pasta no computador.
+-   Uma IDE de sua preferência (testado com IntelliJ IDEA).
 
 #### 2. Configuração do Firebase
 1.  Crie um projeto no [Firebase Console](https://console.firebase.google.com/).
 2.  No menu lateral, vá em **Build > Realtime Database** e crie um novo banco de dados no modo de teste.
 3.  No seu projeto Firebase, clique na engrenagem (Configurações do projeto) > **Contas de serviço**.
-4.  Clique em **"Gerar nova chave privada"**. Um arquivo JSON será baixado.
-5.  Renomeie este arquivo para `serviceAccountKey.json` e mova-o para a pasta `src` do seu projeto.
+4.  Clique em **"Gerar nova chave privada"** e salve o arquivo JSON.
+5.  Renomeie o arquivo para `serviceAccountKey.json` e mova-o para a pasta `src` do projeto.
 6.  Na classe `database/FirebaseConfig.java`, substitua a string `"SUA_URL_DO_BANCO_DE_DADOS_AQUI"` pela URL do seu Realtime Database.
 
-#### 3. Execução
-1.  Clone o repositório:
-    ```bash
-    git clone [URL_DO_SEU_REPOSITORIO]
+#### 3. Execução via IDE (IntelliJ)
+1.  Configure as bibliotecas do JavaFX em `File > Project Structure > Libraries`.
+2.  Crie uma configuração de execução para a classe `App.java`.
+3.  Adicione as seguintes **VM options** na configuração de execução (substitua o caminho):
     ```
-3.  Execute a aplicação através da classe `Main` na sua IDE ou via linha de comando (após configurar o build para gerar um JAR executável).
+    --module-path "C:\caminho\para\seu\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml --enable-native-access=javafx.graphics
+    ```
+4.  Execute a classe `App.java`.
+
+#### 4. Execução via JAR Executável
+O projeto pode ser empacotado em um único `.jar` através da ferramenta de **Artifacts** do IntelliJ (`File > Project Structure > Artifacts`), garantindo que todas as dependências sejam incluídas.
+
+## Autoras
+
+-   Andreísy Neves Ferreira
+-   Isabella Paranhos Meireles
+-   Lorena da Silva Borges
